# daily-reflect

./: .gitignore  README.ko.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: deploy-web.yml  release.yml
apps/agent/: package.json
apps/agent/src/: index.html  main.js  styles.css
apps/agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent/src-tauri/capabilities/: default.json
apps/agent/src-tauri/icons/: icon.icns
apps/agent/src-tauri/src/: ai.rs  buffer.rs  config.rs  github.rs  lib.rs  main.rs  notion.rs  tracker.rs  tray.rs
apps/web/: next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx  shared.tsx
apps/web/src/app/changelog/: page.tsx
apps/web/src/app/download/: page.tsx
apps/web/src/app/guide/: page.tsx
apps/web/src/lib/: i18n.ts
docs/: REVIEW-2026-03-14.md
docs/screenshots/: take-screenshot.mjs  take-screenshot.py
scripts/: fix-macos.command
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql  002_seed_categories.sql
